--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="home">
             <div class="landing">
                 <div class="navBar">
-                    <span class="img"><a href><img src="/image/2.svg"
+                    <span class="img"><a href><img src="image/2.svg"
                                 alt></a></span>
                     <span class="work">Work's</span>
                     <span class="contact">Let's Talk</span>
