--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="home">
             <div class="landing">
                 <div class="navBar">
-                    <span class="img"><a href><img src="image/2.svg"
+                    <span class="img"><a href><img src="./image/2.svg"
                                 alt></a></span>
                     <span class="work">Work's</span>
                     <span class="contact">Let's Talk</span>
@@ -36,10 +36,10 @@
                     </div>
                     <div class="work" id="cart2">
                         <a href="https://aliira16.github.io/coffee-store/"><img
-                                src="/image/works/coffe.png" alt></a>
+                                src="./image/works/coffe.png" alt></a>
                     </div>
                     <div class="work" id="cart3">
-                        <a href><img src="/image/works/tt.png" alt></a>
+                        <a href><img src="./image/works/tt.png" alt></a>
                     </div>
                 </div>
             </div>
