--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="someWorks">
                     <div class="work" id="cart1">
                         <a href="https://aliira16.github.io/Shoes-store/"><img
-                                src="/image/works/shoes.png" alt></a>
+                                src="./image/works/shoes.png" alt></a>
                     </div>
                     <div class="work" id="cart2">
                         <a href="https://aliira16.github.io/coffee-store/"><img
