--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                 animé par le désir<br>de créer des solutions
                                 innovantes et de les partager avec le
                                 monde.</span>
-                            <img src="image/3.svg" alt>
+                            <img src="./image/3.svg" alt>
                         </div>
                         <span class="CC">
                             © 2025 itech-log by Ali rouane</span>
