--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             placeholder="votre Email" required>
                         <textarea autofocus name="votre message" id></textarea>
                         <button class="cntBtn"><span>Envoyer</span> <img
-                                src="/image/2.svg" alt></button>
+                                src="./image/2.svg" alt></button>
                     </form>
                     <div class="media">
                         <div class="ic">
